--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dav": "^1.8.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "ical": "^0.8.0"
+    "ical": "^0.8.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
