--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+"serverless-http": "^3.2.0",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dav": "^1.8.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "ical": "^0.8.0",
-    "xmlhttprequest": "^1.8.0"
+    "ical": "^0.8.0"
   }
 }
